--- a/add_notulen.html
+++ b/add_notulen.html
@@ -64,9 +64,9 @@
                   <li><a href="index.html"><i class="fa fa-home"></i> Dashboard </a></li>
                   <li><a href="#"><i class="fa fa-users"></i> Manajemen Profile </a></li>
                   <li><a href="show_role.html"><i class="fa fa-edit"></i> Manajemen Role </a></li>
-                  <li><a href="show_jabatan.html"><i class="fa fa-gear"></i> Manajemen Jabatan </a></li>
-                  <li><a href="show_user.html"><i class="fa fa-user"></i> Manajemen User </a></li>
-                  <li><a href="show_pertemuan.html"><i class="fa fa-table"></i> Manajemen Pertemuan </a></li>
+                  <li><a href="#"><i class="fa fa-gear"></i> Manajemen Jabatan </a></li>
+                  <li><a href="#"><i class="fa fa-user"></i> Manajemen User </a></li>
+                  <li><a href="#"><i class="fa fa-table"></i> Manajemen Notulen </a></li>
                   <li><a href="#"><i class="fa fa-dollar"></i> Manajemen KAS </a></li>
                   <li><a href="#"><i class="fa fa-check-square-o"></i> Check Kehadiran </a></li>
                   <li><a href="#"><i class="fa fa-check-square-o"></i> Check Notulen </a></li>
@@ -198,49 +198,141 @@
 
         <!-- page content -->
         <div class="right_col" role="main">
-          <!-- top tiles -->
-          <div class="row tile_count">
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Users</span>
-              <div class="count">2500</div>
-              <span class="count_bottom"><i class="green">4% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-clock-o"></i> Average Time</span>
-              <div class="count">123.50</div>
-              <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Males</span>
-              <div class="count green">2,500</div>
-              <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Females</span>
-              <div class="count">4,567</div>
-              <span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Collections</span>
-              <div class="count">2,315</div>
-              <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Connections</span>
-              <div class="count">7,325</div>
-              <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
-            </div>
-          </div>
-          <!-- /top tiles -->
+          <div class="">
+            <div class="page-title">
+              <div class="title_left">
+                <h3>Manajemen Pertemuan <small>HUMAMIKU</small></h3>
+              </div>
 
-          <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="jumbotron">
-                  <h1>Welcome to Dashboard</h1> 
-                  <p>HUMAMIKU</p>
-                  <p>Himpunan Muda-Mudi Kepuh</p>
-                  <!-- <img src="images/humamiku.png" alt="" class="img-jumbotron"> -->
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">Go!</button>
+                    </span>
+                  </div>
                 </div>
+              </div>
+            </div>
+
+            <div class="clearfix"></div>
+
+            <div class="row">
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                  <div class="x_title">
+                    <h2>Add Pertemuan Berikutnya <small>Manajemen Pertemuan</small></h2>
+                    <div class="clearfix"></div>
+                  </div>
+                  <div class="x_content">
+                    <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
+
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Pertemuan <span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" required="required" name="name" class="form-control col-md-7 col-xs-12">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Tanggal <span class="required">*</span></label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" class="form-control has-feedback-left" id="single_cal3" placeholder="First Name" aria-describedby="inputSuccess2Status3">
+                          <span class="fa fa-calendar-o form-control-feedback left" aria-hidden="true"></span>
+                          <span id="inputSuccess2Status3" class="sr-only">(success)</span>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Notulen <span class="required">*</span></label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <div class="btn-toolbar editor" data-role="editor-toolbar" data-target="#editor-one">
+                            <div class="btn-group">
+                              <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font"><i class="fa fa-font"></i><b class="caret"></b></a>
+                              <ul class="dropdown-menu">
+                              </ul>
+                            </div>
+
+                            <div class="btn-group">
+                              <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
+                              <ul class="dropdown-menu">
+                                <li>
+                                  <a data-edit="fontSize 5">
+                                    <p style="font-size:17px">Huge</p>
+                                  </a>
+                                </li>
+                                <li>
+                                  <a data-edit="fontSize 3">
+                                    <p style="font-size:14px">Normal</p>
+                                  </a>
+                                </li>
+                                <li>
+                                  <a data-edit="fontSize 1">
+                                    <p style="font-size:11px">Small</p>
+                                  </a>
+                                </li>
+                              </ul>
+                            </div>
+
+                            <div class="btn-group">
+                              <a class="btn" data-edit="bold" title="Bold (Ctrl/Cmd+B)"><i class="fa fa-bold"></i></a>
+                              <a class="btn" data-edit="italic" title="Italic (Ctrl/Cmd+I)"><i class="fa fa-italic"></i></a>
+                              <a class="btn" data-edit="strikethrough" title="Strikethrough"><i class="fa fa-strikethrough"></i></a>
+                              <a class="btn" data-edit="underline" title="Underline (Ctrl/Cmd+U)"><i class="fa fa-underline"></i></a>
+                            </div>
+
+                            <div class="btn-group">
+                              <a class="btn" data-edit="insertunorderedlist" title="Bullet list"><i class="fa fa-list-ul"></i></a>
+                              <a class="btn" data-edit="insertorderedlist" title="Number list"><i class="fa fa-list-ol"></i></a>
+                              <a class="btn" data-edit="outdent" title="Reduce indent (Shift+Tab)"><i class="fa fa-dedent"></i></a>
+                              <a class="btn" data-edit="indent" title="Indent (Tab)"><i class="fa fa-indent"></i></a>
+                            </div>
+
+                            <div class="btn-group">
+                              <a class="btn" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="fa fa-align-left"></i></a>
+                              <a class="btn" data-edit="justifycenter" title="Center (Ctrl/Cmd+E)"><i class="fa fa-align-center"></i></a>
+                              <a class="btn" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="fa fa-align-right"></i></a>
+                              <a class="btn" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="fa fa-align-justify"></i></a>
+                            </div>
+
+                            <div class="btn-group">
+                              <a class="btn dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
+                              <div class="dropdown-menu input-append">
+                                <input class="span2" placeholder="URL" type="text" data-edit="createLink" />
+                                <button class="btn" type="button">Add</button>
+                              </div>
+                              <a class="btn" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-cut"></i></a>
+                            </div>
+
+                            <div class="btn-group">
+                              <a class="btn" title="Insert picture (or just drag & drop)" id="pictureBtn"><i class="fa fa-picture-o"></i></a>
+                              <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
+                            </div>
+
+                            <div class="btn-group">
+                              <a class="btn" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i></a>
+                              <a class="btn" data-edit="redo" title="Redo (Ctrl/Cmd+Y)"><i class="fa fa-repeat"></i></a>
+                            </div>
+                          </div>
+
+                          <div id="editor-one" class="editor-wrapper"></div>
+
+                          <textarea name="descr" id="descr" style="display:none;"></textarea>
+                        </div>
+                      </div>
+                      <div class="ln_solid"></div>
+                      <div class="form-group">
+                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                          <a href="show_pertemuan.html" type="button" class="btn btn-primary"><i class="fa fa-rotate-left"></i> Kembali</a>
+                          <button type="submit" class="btn btn-success"><i class="fa fa-save"></i> Simpan</button>
+                        </div>
+                      </div>
+
+                    </form>
+
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
