--- a/show_jabatan.html
+++ b/show_jabatan.html
@@ -64,9 +64,9 @@
                   <li><a href="index.html"><i class="fa fa-home"></i> Dashboard </a></li>
                   <li><a href="#"><i class="fa fa-users"></i> Manajemen Profile </a></li>
                   <li><a href="show_role.html"><i class="fa fa-edit"></i> Manajemen Role </a></li>
-                  <li><a href="show_jabatan.html"><i class="fa fa-gear"></i> Manajemen Jabatan </a></li>
-                  <li><a href="show_user.html"><i class="fa fa-user"></i> Manajemen User </a></li>
-                  <li><a href="show_pertemuan.html"><i class="fa fa-table"></i> Manajemen Pertemuan </a></li>
+                  <li><a href="#"><i class="fa fa-gear"></i> Manajemen Jabatan </a></li>
+                  <li><a href="#"><i class="fa fa-user"></i> Manajemen User </a></li>
+                  <li><a href="#"><i class="fa fa-table"></i> Manajemen Notulen </a></li>
                   <li><a href="#"><i class="fa fa-dollar"></i> Manajemen KAS </a></li>
                   <li><a href="#"><i class="fa fa-check-square-o"></i> Check Kehadiran </a></li>
                   <li><a href="#"><i class="fa fa-check-square-o"></i> Check Notulen </a></li>
@@ -198,49 +198,112 @@
 
         <!-- page content -->
         <div class="right_col" role="main">
-          <!-- top tiles -->
-          <div class="row tile_count">
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Users</span>
-              <div class="count">2500</div>
-              <span class="count_bottom"><i class="green">4% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-clock-o"></i> Average Time</span>
-              <div class="count">123.50</div>
-              <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Males</span>
-              <div class="count green">2,500</div>
-              <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Females</span>
-              <div class="count">4,567</div>
-              <span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Collections</span>
-              <div class="count">2,315</div>
-              <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> Total Connections</span>
-              <div class="count">7,325</div>
-              <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
-            </div>
-          </div>
-          <!-- /top tiles -->
+          <div class="">
+            <div class="page-title">
+              <div class="title_left">
+                <h3>Manajemen Jabatan <small>HUMAMIKU</small></h3>
+              </div>
 
-          <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="jumbotron">
-                  <h1>Welcome to Dashboard</h1> 
-                  <p>HUMAMIKU</p>
-                  <p>Himpunan Muda-Mudi Kepuh</p>
-                  <!-- <img src="images/humamiku.png" alt="" class="img-jumbotron"> -->
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">Go!</button>
+                    </span>
+                  </div>
                 </div>
+              </div>
+            </div>
+
+            <div class="clearfix"></div>
+
+            <div class="row">
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                  <div class="x_title">
+                    <!-- <h2>Hover rows <small>Try hovering over the rows</small></h2> -->
+                    <div class="row">
+                      <div class="col-lg-6 col-md-6 col-sm-6">
+                        <a href="add_jabatan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-plus"></i> Add Jabatan</a>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div class="show-table">
+                          <label style="float: right;">
+                            Show
+                            <select id="heard" class="form-control entries" required>
+                              <option value="10">10</option>
+                              <option value="20">20</option>
+                              <option value="30">30</option>
+                              <option value="40">40</option>
+                            </select>
+                             entries
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="clearfix"></div>
+                  </div>
+                  <div class="x_content">
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th class="th-table">No</th>
+                          <th class="th-table">Jabatan</th>
+                          <th class="th-table">Action</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row" class="col-md-1">1</th>
+                          <td class="col-md-8">Ketua</td>
+                          <td class="col-md-2">
+                            <a href="edit_jabatan.html" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
+                            <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <th scope="row" class="col-md-1">2</th>
+                          <td class="col-md-8">Wakil Ketua</td>
+                          <td class="col-md-2">
+                            <a href="#" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
+                            <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <th scope="row" class="col-md-1">3</th>
+                          <td class="col-md-8">Sekretaris</td>
+                          <td class="col-md-2">
+                            <a href="#" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
+                            <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+
+                    <div class="row">
+                      <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div>Showing 1 to 10 of 57 entries</div>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div style="margin-top: -25px; margin-bottom: -15px;" class="dataTables_paginate paging_simple_numbers" id="datatable_paginate">
+                            <ul class="pagination">
+                              <li class="paginate_button previous disabled" id="datatable_previous"><a href="#" aria-controls="datatable" data-dt-idx="0" tabindex="0">Previous</a></li>
+                              <li class="paginate_button active"><a href="#" aria-controls="datatable" data-dt-idx="1" tabindex="0">1</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="2" tabindex="0">2</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="3" tabindex="0">3</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="4" tabindex="0">4</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="5" tabindex="0">5</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="6" tabindex="0">6</a></li>
+                              <li class="paginate_button next" id="datatable_next"><a href="#" aria-controls="datatable" data-dt-idx="7" tabindex="0">Next</a></li>
+                            </ul>
+                          </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
