--- a/show_pertemuan.html
+++ b/show_pertemuan.html
@@ -61,19 +61,14 @@
               <div class="menu_section">
                 <h3>Menu</h3>
                 <ul class="nav side-menu">
-                  <li><a href="index.html"><i class="fa fa-home"></i> Dashboard </a></li>
+                  <li><a href="dashboard.html"><i class="fa fa-home"></i> Dashboard </a></li>
                   <li><a href="#"><i class="fa fa-users"></i> Manajemen Profile </a></li>
                   <li><a href="show_role.html"><i class="fa fa-edit"></i> Manajemen Role </a></li>
-                  <li><a href="#"><i class="fa fa-gear"></i> Manajemen Jabatan </a></li>
-                  <li><a href="#"><i class="fa fa-user"></i> Manajemen User </a></li>
-                  <li><a href="#"><i class="fa fa-table"></i> Manajemen Notulen </a></li>
+                  <li><a href="show_jabatan.html"><i class="fa fa-gear"></i> Manajemen Jabatan </a></li>
+                  <li><a href="show_user.html"><i class="fa fa-user"></i> Manajemen User </a></li>
+                  <li><a href="show_pertemuan.html"><i class="fa fa-table"></i> Manajemen Pertemuan </a></li>
                   <li><a href="#"><i class="fa fa-dollar"></i> Manajemen KAS </a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o"></i> Check Kehadiran </a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o"></i> Check Notulen </a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o"></i> Check Saldo KAS </a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o"></i> Check Iuran KAS </a></li>
                   <li><a href="#"><i class="fa fa-dollar"></i> Manajemen Cash Flow </a></li>
-                  <li><a href="#"><i class="fa fa-file"></i> Presensi </a></li>
                 </ul>
               </div>
 
@@ -225,8 +220,9 @@
                     <!-- <h2>Hover rows <small>Try hovering over the rows</small></h2> -->
                     <div class="row">
                       <div class="col-lg-6 col-md-6 col-sm-6">
-                        <a href="add_pertemuan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-plus"></i> Add Pertemuan Berikutnya</a>
-                        <a href="add_notulen.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-plus"></i> Add Notulen</a>
+                        <a href="add_pertemuan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-plus"></i> Tambah Pertemuan Berikutnya</a>
+                        <a href="add_notulen.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-plus"></i> Tambah Notulen</a>
+                        <a href="add_iuran.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-plus"></i> Tambah Iuran</a>
                       </div>
                       <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="show-table">
@@ -262,7 +258,8 @@
                           <td>Tempat 1</td>
                           <td>Tanggal 1</td>
                           <td>Rp 2000</td>
-                          <td class="col-md-2">
+                          <td class="col-md-3">
+                            <a href="view_pertemuan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-eye"></i> View</a>
                             <a href="edit_user.html" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
                             <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
                           </td>
@@ -272,7 +269,8 @@
                           <td>Tempat 2</td>
                           <td>Tanggal 2</td>
                           <td>Rp 4000</td>
-                          <td class="col-md-2">
+                          <td class="col-md-3">
+                            <a href="view_pertemuan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-eye"></i> View</a>
                             <a href="#" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
                             <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
                           </td>
@@ -282,7 +280,8 @@
                           <td>Tempat 3</td>
                           <td>Tanggal 3</td>
                           <td>Rp 5000</td>
-                          <td class="col-md-2">
+                          <td class="col-md-3">
+                            <a href="view_pertemuan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-eye"></i> View</a>
                             <a href="#" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
                             <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
                           </td>
