--- a/add_iuran.html
+++ b/add_iuran.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="dashboard/img/favicon.ico" type="image/ico" />
+  <link rel="icon" href="dashboard/img/favicon.ico" type="image/ico" />
 
     <title> Humamiku </title>
 
@@ -18,7 +18,7 @@
     <link href="dashboard/vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
     <link href="dashboard/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
-	
+  
     <!-- bootstrap-progressbar -->
     <link href="dashboard/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
     <!-- JQVMap -->
@@ -196,7 +196,7 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3>Manajemen Role <small>HUMAMIKU</small></h3>
+                <h3>Manajemen Pertemuan <small>HUMAMIKU</small></h3>
               </div>
 
               <div class="title_right">
@@ -217,34 +217,73 @@
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Edit Role <small>Manajemen Role</small></h2>
+                    <h2>Tambah Iuran <small>Manajemen Pertemuan</small></h2>
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
+                    <h2 class="text-center" style="margin-bottom: 30px;">Iuran Rutin Tanggal <strong>1 September 2019</strong></h2>
                     <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
-
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Role Name <span class="required">*</span>
-                        </label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" id="first-name" value="joe" required="required" class="form-control col-md-7 col-xs-12">
+                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Ketua Humamiku : </label>
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                          <select class="form-control">
+                            <option>--Nominal--</option>
+                            <option value="5000">Rp 5.000</option>
+                            <option value="10000">Rp 10.000</option>
+                            <option value="15000">Rp 15.000</option>
+                            <option value="20000">Rp 20.000</option>
+                          </select>
+                        </div>
+                        <div class="col-md-3 col-sm-3 col-xs-12">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" class="flat" checked="checked"> Titip?
+                            </label>
+                          </div>
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Select <span class="required">*</span></label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
+                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Wakil Ketua : </label>
+                        <div class="col-md-4 col-sm-4 col-xs-12">
                           <select class="form-control">
-                            <option>Options</option>
-                            <option value="Level 1">Level 1</option>
-                            <option value="Level 2">Level 2</option>
-                            <option value="Level 3">Level 3</option>
+                            <option>--Nominal--</option>
+                            <option value="5000">Rp 5.000</option>
+                            <option value="10000">Rp 10.000</option>
+                            <option value="15000">Rp 15.000</option>
+                            <option value="20000">Rp 20.000</option>
                           </select>
+                        </div>
+                        <div class="col-md-3 col-sm-3 col-xs-12">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" class="flat" checked="checked"> Titip?
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Sekretaris : </label>
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                          <select class="form-control">
+                            <option>--Nominal--</option>
+                            <option value="5000">Rp 5.000</option>
+                            <option value="10000">Rp 10.000</option>
+                            <option value="15000">Rp 15.000</option>
+                            <option value="20000">Rp 20.000</option>
+                          </select>
+                        </div>
+                        <div class="col-md-3 col-sm-3 col-xs-12">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox" class="flat" checked="checked"> Titip?
+                            </label>
+                          </div>
                         </div>
                       </div>
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                          <a href="show_role.html" type="button" class="btn btn-primary"><i class="fa fa-rotate-left"></i> Kembali</a>
+                          <a href="show_pertemuan.html" type="button" class="btn btn-primary"><i class="fa fa-rotate-left"></i> Kembali</a>
                           <button type="submit" class="btn btn-success"><i class="fa fa-save"></i> Simpan</button>
                         </div>
                       </div>
@@ -310,6 +349,6 @@
 
     <!-- Custom Theme Scripts -->
     <script src="dashboard/js/custom.min.js"></script>
-	
+  
   </body>
 </html>
